[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1.0.0"
]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.constcheck]
ignore_strings = [
  "store",
  "store_true",
  "utf-8"
]

[tool.constcheck.ignore_from]
"tests/_test.py" = [
  "kwargs,expected",
  "name,template,expected"
]

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = [
  "constcheck/__main__.py",
  "whitelist.py"
]

[tool.docsig]
check-class = true
summary = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poetry]
authors = [
  "jshwi <stephen@jshwisolutions.com>"
]
description = "Check Python files for repeat use of strings"
documentation = "https://constcheck.readthedocs.io/en/latest"
homepage = "https://pypi.org/project/constcheck/"
keywords = [
  "check",
  "const",
  "constant",
  "dry",
  "str"
]
license = "MIT"
maintainers = [
  "jshwi <stephen@jshwisolutions.com>"
]
name = "constcheck"
readme = "README.rst"
repository = "https://github.com/jshwi/constcheck"
version = "0.8.1"

[tool.poetry.dependencies]
arcon = "^0"
object-colors = "^2.0.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
deptry = "^0.8.0"
ipython = "^8.12.0"
pre-commit = "^3.2.1"
pyaud = "^6.2.2"
pylint = "2.17.1"
pytest = "^7.2.0"
pytest-randomly = "^3.12.0"
pytest-sugar = "^0.9.5"
restview = "^3.0.0"
sphinx-immaterial = "^0.11.3"
sphinx-toolbox = "^3.4.0"
templatest = "^0.8.0"
tomli-w = "^1.0.0"

[tool.poetry.scripts]
constcheck = "constcheck.__main__:main"

[tool.pyaud.audit]
modules = [
  "commit-policy",
  "const",
  "docs",
  "files",
  "format",
  "format-docs",
  "format-str",
  "imports",
  "lint",
  "params",
  "test",
  "typecheck",
  "unused"
]

[tool.pyaud.clean]
exclude = [
  ".env",
  ".mypy_cache",
  "node_modules"
]

[tool.pyaud.indexing]
exclude = [
  "conf.py",
  "whitelist.py"
]

[tool.pyaud.logging]
disable_existing_loggers = true
version = 1

[tool.pyaud.logging.formatters.standard]
format = "%(asctime)s %(levelname)s %(name)s %(message)s"

[tool.pyaud.logging.handlers.default]
backupCount = 60
class = "logging.handlers.TimedRotatingFileHandler"
filename = "~/.cache/pyaud/log/pyaud.log"
formatter = "standard"
when = "d"

[tool.pyaud.logging.root]
handlers = [
  "default"
]
level = "DEBUG"
propagate = false

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--cov-report=term-missing",
  "--durations=5",
  "-vv"
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = [
  ".git",
  ".idea",
  ".mypy_cache",
  ".pytest_cache",
  "docs"
]
