[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1.0.0"
]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.constcheck]
ignore_strings = [
  "store",
  "store_true",
  "utf-8"
]

[tool.constcheck.ignore_from]
"tests/_test.py" = [
  "kwargs,expected",
  "name,template,expected"
]

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = [
  "constcheck/__main__.py",
  "whitelist.py"
]

[tool.docsig]
check-class = true
summary = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poetry]
authors = [
  "jshwi <stephen@jshwisolutions.com>"
]
description = "Check Python files for repeat use of strings"
documentation = "https://constcheck.readthedocs.io/en/latest"
homepage = "https://pypi.org/project/constcheck/"
keywords = [
  "check",
  "const",
  "constant",
  "dry",
  "str"
]
license = "MIT"
maintainers = [
  "jshwi <stephen@jshwisolutions.com>"
]
name = "constcheck"
readme = "README.rst"
repository = "https://github.com/jshwi/constcheck"
version = "0.10.0"

[tool.poetry.dependencies]
arcon = "^0"
object-colors = "^2.0.1"
python = "^3.9"
typing-extensions = "^4.9.0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
deptry = "^0.19.0"
ipython = "^8.6.0"
marshmallow = "4.0.0"
pre-commit = "^3.5.0"
pyaud = "^7.3.1"
pytest-randomly = "^3.12.0"
pytest-sugar = "^1.0.0"
restview = "^3.0.0"
sphinx-immaterial = "^0.11.11"
sphinx-toolbox = "^3.2.0"
templatest = "^0.10.1"
tomli-w = "^1.0.0"

[tool.poetry.scripts]
constcheck = "constcheck.__main__:main"

[tool.pyaud]
audit = [
  "about-tests",
  "commit-policy",
  "const",
  "copyright-year",
  "docs",
  "files",
  "format",
  "format-docs",
  "format-str",
  "imports",
  "lint",
  "params",
  "test",
  "typecheck",
  "unused"
]
exclude = '''
(?x)^(
  | docs\/conf\.py
  | whitelist\.py
)$
'''

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--cov-report=term-missing",
  "--durations=5",
  "-vv"
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = [
  ".git",
  ".idea",
  ".mypy_cache",
  ".pytest_cache",
  "docs"
]
