[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1.0.0"
]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79

[tool.bumpversion]
allow_dirty = true
commit = true
commit_args = "-sS"
current_version = "0.12.0"
message = "bump: version {current_version} → {new_version}"
sign_tags = true
tag = true

[[tool.bumpversion.files]]
filename = "docs/conf.py"

[[tool.bumpversion.files]]
filename = "constcheck/_version.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
replace = 'version = "{new_version}"'
search = 'version = "{current_version}"'

[[tool.bumpversion.files]]
filename = "Makefile"
replace = "VERSION := {new_version}"
search = "VERSION := {current_version}"

[[tool.bumpversion.files]]
filename = "SECURITY.md"

[tool.constcheck]
ignore_strings = [
  "store",
  "store_true",
  "utf-8"
]

[tool.constcheck.ignore_from]
"tests/_test.py" = [
  "kwargs,expected",
  "name,template,expected"
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover"
]
fail_under = 100

[tool.coverage.run]
omit = [
  "constcheck/__main__.py",
  "whitelist.py"
]

[tool.deptry.per_rule_ignores]
DEP004 = [
  "git",
  "pytest",
  "tomli",
  "tomli_w",
  "yaml"
]

[tool.docsig]
check-class = true
summary = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poetry]
authors = [
  "jshwi <stephen@jshwisolutions.com>"
]
description = "Check Python files for repeat use of strings"
documentation = "https://constcheck.readthedocs.io/en/latest"
homepage = "https://pypi.org/project/constcheck/"
keywords = [
  "check",
  "const",
  "constant",
  "dry",
  "str"
]
license = "MIT"
maintainers = [
  "jshwi <stephen@jshwisolutions.com>"
]
name = "constcheck"
readme = "README.rst"
repository = "https://github.com/jshwi/constcheck"
version = "0.12.0"

[tool.poetry.dependencies]
arcon = "^0"
object-colors = "^2.0.1"
python = "^3.10"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
bump-my-version = "^1.2.5"
deptry = ">=0.23.1,<0.25.0"
docsig = "^0.72.0"
flynt = "^1.0.6"
gitpython = "^3.1.45"
ipython = "^8.6.0"
mypy = "^1.19.1"
pre-commit = ">=3.5,<5.0"
pylint = "^3.3.7"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-randomly = "^3.12.0"
pytest-sugar = "^1.0.0"
pyyaml = "^6.0.3"
restview = "^3.0.0"
sphinx-immaterial = ">=0.12.5,<0.14.0"
sphinx-markdown-builder = "^0.5.5"
sphinx-toolbox = "^4.1.0"
sphinxcontrib-fulltoc = "^1.2.0"
sphinxcontrib-programoutput = "^0.18"
templatest = ">=0.10.1,<0.13.0"
tomli = "^2.3.0"
tomli-w = "^1.0.0"
towncrier = "^25.8.0"
vulture = "^2.14"

[tool.poetry.scripts]
constcheck = "constcheck.__main__:main"

[tool.pylint.options]
disable = [
  "consider-using-f-string",
  "fixme"
]
ignore-patterns = [
  'conf\.py',
  'whitelist\.py'
]
min-similarity-lines = 4

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--cov-report=term-missing",
  "--durations=5",
  "-vv"
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = [
  ".git",
  ".idea",
  ".mypy_cache",
  ".pytest_cache",
  "docs"
]

[tool.towncrier]
directory = "changelog"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/jshwi/constcheck/issues/{issue})"
package = "constcheck"
start_string = "<!-- release notes start -->\n"
template = "changelog/_template.md"

[tool.towncrier.fragment.add]
name = "Added"

[tool.towncrier.fragment.change]
name = "Changed"

[tool.towncrier.fragment.deprecate]
name = "Deprecated"

[tool.towncrier.fragment.fix]
name = "Fixed"

[tool.towncrier.fragment.hack]
name = "Hacked"

[tool.towncrier.fragment.remove]
name = "Removed"

[tool.towncrier.fragment.security]
name = "Security"
